{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 2710,
  "lineage": "8f3a43e0-1e7b-07e8-a828-8e1d9446ad77",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "id_vpn_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.50.87.158",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-18T21:18:48.259-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/addresses/id-vpn-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "id-vpn-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mitsui-id-network-defaroyan",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/addresses/id-vpn-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-esp",
              "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp4500",
              "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp500"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "jp_vpn_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.97.149.60",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-18T21:18:48.527-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/addresses/jp-vpn-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "jp-vpn-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mitsui-jp-network-defaroyan",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/addresses/jp-vpn-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-esp",
              "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp500",
              "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp4500"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instanceGroups/ngfw-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-03-18T21:20:48.235-07:00",
            "enable_cdn": false,
            "fingerprint": "8KurAT_xTng=",
            "generated_id": 5502531035515582671,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/healthChecks/ngfw-health-check"
            ],
            "id": "projects/mitsui-id-network-defaroyan/global/backendServices/lb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-backend-service",
            "port_name": "http",
            "project": "mitsui-id-network-defaroyan",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/backendServices/lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.ngfw_health_check",
            "google_compute_instance.ngfw_router",
            "google_compute_instance_group.ngfw_instance_group",
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:50.816-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-external",
            "log_config": [],
            "name": "allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-external",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp_from_transit",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-core",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-18T22:32:26.878-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-core-defaroyan/global/firewalls/allow-icmp-from-transit",
            "log_config": [],
            "name": "allow-icmp-from-transit",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-core-defaroyan/global/networks/prod-vpc",
            "priority": 1000,
            "project": "mitsui-id-core-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-core-defaroyan/global/firewalls/allow-icmp-from-transit",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.prod_vpc",
            "google_project_service.api_id_core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_to_ngfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:26.639-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-lb-to-ngfw",
            "log_config": [],
            "name": "allow-lb-to-ngfw",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-lb-to-ngfw",
            "source_ranges": [
              "130.211.0.0/22",
              "34.117.240.8",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nat-gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.lb_ip",
            "google_compute_network.internet_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:27.041-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-prod",
            "log_config": [],
            "name": "allow-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-prod",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.prod_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_id_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:39.056-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-external-id",
            "log_config": [],
            "name": "allow-ssh-external-id",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-external-id",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_id_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:20.076-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-internet-id",
            "log_config": [],
            "name": "allow-ssh-internet-id",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-internet-id",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.internet_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_id_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:28.137-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-prod-id",
            "log_config": [],
            "name": "allow-ssh-prod-id",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-prod-id",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.prod_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_id_transit",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:14.828-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-transit-id",
            "log_config": [],
            "name": "allow-ssh-transit-id",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-ssh-transit-id",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_jp_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:14.924-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-jp-network-defaroyan/global/firewalls/allow-ssh-jp",
            "log_config": [],
            "name": "allow-ssh-jp",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "priority": 1000,
            "project": "mitsui-jp-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/firewalls/allow-ssh-jp",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_jp_vpc",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_transit",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:14.987-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/allow-transit",
            "log_config": [],
            "name": "allow-transit",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/allow-transit",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "id_allow_internal_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:48.269-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/id-allow-internal-vpn",
            "log_config": [],
            "name": "id-allow-internal-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/id-allow-internal-vpn",
            "source_ranges": [
              "10.10.21.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "id_vpn_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "500",
                  "4500"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "esp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:38.875-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-id-network-defaroyan/global/firewalls/id-vpn-traffic",
            "log_config": [],
            "name": "id-vpn-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/firewalls/id-vpn-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jp_allow_internal_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:08.134-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-jp-network-defaroyan/global/firewalls/jp-allow-internal-vpn",
            "log_config": [],
            "name": "jp-allow-internal-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "priority": 1000,
            "project": "mitsui-jp-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/firewalls/jp-allow-internal-vpn",
            "source_ranges": [
              "10.10.3.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_jp_vpc",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jp_vpn_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "500",
                  "4500"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "esp"
              }
            ],
            "creation_timestamp": "2025-03-18T21:19:08.156-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mitsui-jp-network-defaroyan/global/firewalls/jp-vpn-traffic",
            "log_config": [],
            "name": "jp-vpn-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "priority": 1000,
            "project": "mitsui-jp-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/firewalls/jp-vpn-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.external_jp_vpc",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "id_esp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:20:06.237-07:00",
            "forwarding_rule_id": 2778791256044075801,
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-esp",
            "ip_address": "34.50.87.158",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-id-vpn-gateway-esp",
            "network_tier": "PREMIUM",
            "project": "mitsui-id-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/targetVpnGateways/id-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.id_vpn_static_ip",
            "google_compute_network.external_id_vpc",
            "google_compute_vpn_gateway.id_vpn_gateway",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "id_udp_4500_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:20:07.123-07:00",
            "forwarding_rule_id": 5974755568655006488,
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp4500",
            "ip_address": "34.50.87.158",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-id-vpn-gateway-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "mitsui-id-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/targetVpnGateways/id-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.id_vpn_static_ip",
            "google_compute_network.external_id_vpc",
            "google_compute_vpn_gateway.id_vpn_gateway",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "id_udp_500_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:20:12.242-07:00",
            "forwarding_rule_id": 2538939133816470291,
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp500",
            "ip_address": "34.50.87.158",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-id-vpn-gateway-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "mitsui-id-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/forwardingRules/fr-id-vpn-gateway-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/targetVpnGateways/id-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.id_vpn_static_ip",
            "google_compute_network.external_id_vpc",
            "google_compute_vpn_gateway.id_vpn_gateway",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "jp_esp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:19:51.362-07:00",
            "forwarding_rule_id": 1137264767081642760,
            "id": "projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-esp",
            "ip_address": "34.97.149.60",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-jp-vpn-gateway-esp",
            "network_tier": "PREMIUM",
            "project": "mitsui-jp-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/targetVpnGateways/jp-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.jp_vpn_static_ip",
            "google_compute_network.external_jp_vpc",
            "google_compute_vpn_gateway.jp_vpn_gateway",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "jp_udp_4500_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:19:54.624-07:00",
            "forwarding_rule_id": 8948623488847444741,
            "id": "projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp4500",
            "ip_address": "34.97.149.60",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-jp-vpn-gateway-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "mitsui-jp-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/targetVpnGateways/jp-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.jp_vpn_static_ip",
            "google_compute_network.external_jp_vpc",
            "google_compute_vpn_gateway.jp_vpn_gateway",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "jp_udp_500_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-03-18T21:19:54.038-07:00",
            "forwarding_rule_id": 8542057456496802565,
            "id": "projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp500",
            "ip_address": "34.97.149.60",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-jp-vpn-gateway-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "mitsui-jp-network-defaroyan",
            "recreate_closed_psc": false,
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/forwardingRules/fr-jp-vpn-gateway-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/targetVpnGateways/jp-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.jp_vpn_static_ip",
            "google_compute_network.external_jp_vpc",
            "google_compute_vpn_gateway.jp_vpn_gateway",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.240.8",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-18T21:18:48.151-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mitsui-id-network-defaroyan/global/addresses/lb-external-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-external-ip",
            "prefix_length": 0,
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/addresses/lb-external-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 39282542800009356,
            "id": "projects/mitsui-id-network-defaroyan/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "34.117.240.8",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/forwardingRules/lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/targetHttpProxies/lb-target-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.ngfw_health_check",
            "google_compute_instance.ngfw_router",
            "google_compute_instance_group.ngfw_instance_group",
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_compute_target_http_proxy.lb_proxy",
            "google_compute_url_map.lb_url_map",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "external_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/disks/external-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-18T21:20:18.841-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/external-vm",
            "instance_id": "8407621935000189165",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "qH5gWXV6sUQ=",
            "name": "external-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
                "network_ip": "10.10.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-external-id-vpc",
                "subnetwork_project": "mitsui-id-network-defaroyan"
              }
            ],
            "project": "mitsui-id-network-defaroyan",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/external-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_compute_subnetwork.subnet_external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ngfw_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/disks/ngfw-router"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-03-18T21:20:15.504-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/ngfw-router",
            "instance_id": "8997857686803970832",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "gU6kXEdpdLg=",
            "metadata_startup_script": "#!/bin/bash\n# Enable IP forwarding\ntouch /home/test.sh\necho \"net.ipv4.ip_forward=1\" | sudo tee -a /etc/sysctl.conf\nsudo sysctl -p\n\n# # Install iptables\n# sudo apt-get update\n# sudo apt-get install -y iptables-persistent\n\n# Configure iptables for forwarding\nsudo iptables -F\nsudo iptables -t nat -A POSTROUTING -o $(/sbin/ifconfig | head -1 | awk -F: '{print $1}') -j MASQUERADE\n\n# # Save iptables rules\n# sudo netfilter-persistent save",
            "name": "ngfw-router",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-internet-id-vpc",
                "subnetwork_project": "mitsui-id-network-defaroyan"
              },
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
                "network_ip": "10.10.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-transit-id-vpc",
                "subnetwork_project": "mitsui-id-network-defaroyan"
              }
            ],
            "project": "mitsui-id-network-defaroyan",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/ngfw-router",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nat-gateway"
            ],
            "tags_fingerprint": "c4cnTQfklE0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postgresql_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/zones/asia-northeast2-a/disks/postgresql-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-03-18T21:20:05.485-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mitsui-jp-network-defaroyan/zones/asia-northeast2-a/instances/postgresql-vm",
            "instance_id": "8557927661303233306",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "nZpes4-QLtc=",
            "name": "postgresql-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
                "network_ip": "10.10.21.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/subnetworks/subnet-external-jp-vpc",
                "subnetwork_project": "mitsui-jp-network-defaroyan"
              }
            ],
            "project": "mitsui-jp-network-defaroyan",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/zones/asia-northeast2-a/instances/postgresql-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-northeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.external_jp_vpc",
            "google_compute_subnetwork.subnet_external_jp_vpc",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/disks/prod-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-03-18T21:20:45.841-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/prod-vm",
            "instance_id": "4940385847296391410",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "qH5gWXV6sUQ=",
            "name": "prod-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc",
                "network_ip": "10.10.4.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-prod-id-vpc",
                "subnetwork_project": "mitsui-id-network-defaroyan"
              }
            ],
            "project": "mitsui-id-network-defaroyan",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/prod-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.prod_id_vpc",
            "google_compute_subnetwork.subnet_prod_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "transit_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/disks/transit-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-03-18T21:20:05.245-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/transit-vm",
            "instance_id": "2194003919363373850",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "defaroyan:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBKEKaz/cX/znTlkq/Fp2Glcmj4VjhJ/zjUn6/7AuzTDrYsBq9FZCgpljeR3EYPVf+Hu6x1AU9niHhmB5sKO7450= google-ssh {\"userName\":\"defaroyan@bayleaf-guesthouse.com\",\"expireOn\":\"2025-03-19T06:03:05+0000\"}\ndefaroyan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDGwDWieS2hD0EtNZLlm0dekt0hJVNDDPjYQTv5imzzDa41BkWh47dEFM2qUCk6wOfNYo7Zeyza6iXrdq8ARWxeYz90R1NKB/UjyAILdQFMagG/yb+I/Xrx/POa3LANIAUpX+y8Bm0i7h3EGp2K8u [...]
            },
            "metadata_fingerprint": "gvG_gTACxh0=",
            "name": "transit-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
                "network_ip": "10.10.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-transit-id-vpc",
                "subnetwork_project": "mitsui-id-network-defaroyan"
              }
            ],
            "project": "mitsui-id-network-defaroyan",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/transit-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "external_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "mtu": 0,
            "name": "external-id-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1765434962828852035",
            "numeric_id": "1765434962828852035",
            "project": "mitsui-id-network-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc"
          },
          "dependencies": [
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "external_jp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "mtu": 0,
            "name": "external-jp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3991648067193928543",
            "numeric_id": "3991648067193928543",
            "project": "mitsui-jp-network-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc"
          },
          "dependencies": [
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "internet_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
            "mtu": 0,
            "name": "internet-id-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6454975037387045699",
            "numeric_id": "6454975037387045699",
            "project": "mitsui-id-network-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc"
          },
          "dependencies": [
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prod_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc",
            "mtu": 0,
            "name": "prod-id-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5715351836173007683",
            "numeric_id": "5715351836173007683",
            "project": "mitsui-id-network-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc"
          },
          "dependencies": [
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-core",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-id-core-defaroyan/global/networks/prod-vpc",
            "mtu": 0,
            "name": "prod-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3641756262912752451",
            "numeric_id": "3641756262912752451",
            "project": "mitsui-id-core-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-core-defaroyan/global/networks/prod-vpc"
          },
          "dependencies": [
            "google_project_service.api_id_core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "transit_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
            "mtu": 0,
            "name": "transit-id-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6941656284415916867",
            "numeric_id": "6941656284415916867",
            "project": "mitsui-id-network-defaroyan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc"
          },
          "dependencies": [
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "id_to_jp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-18T21:20:44.545-07:00",
            "description": "",
            "dest_range": "10.10.21.0/24",
            "id": "projects/mitsui-id-network-defaroyan/global/routes/id-to-jp-route",
            "name": "id-to-jp-route",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "next_hop_gateway": "",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/vpnTunnels/id-to-jp-tunnel",
            "priority": 1000,
            "project": "mitsui-id-network-defaroyan",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/routes/id-to-jp-route",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.id_vpn_static_ip",
            "google_compute_address.jp_vpn_static_ip",
            "google_compute_forwarding_rule.id_esp_rule",
            "google_compute_forwarding_rule.id_udp_4500_rule",
            "google_compute_forwarding_rule.id_udp_500_rule",
            "google_compute_network.external_id_vpc",
            "google_compute_vpn_gateway.id_vpn_gateway",
            "google_compute_vpn_tunnel.id_to_jp_tunnel",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "internet_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-18T21:20:35.241-07:00",
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/mitsui-id-network-defaroyan/global/routes/transit-default-route",
            "name": "transit-default-route",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
            "next_hop_gateway": "",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/mitsui-id-network-defaroyan/zones/asia-southeast2-a/instances/ngfw-router",
            "next_hop_instance_zone": "asia-southeast2-a",
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 999,
            "project": "mitsui-id-network-defaroyan",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/routes/transit-default-route",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.ngfw_router",
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "jp_to_id_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-18T21:20:42.796-07:00",
            "description": "",
            "dest_range": "10.10.3.0/24",
            "id": "projects/mitsui-jp-network-defaroyan/global/routes/jp-to-id-route",
            "name": "jp-to-id-route",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "next_hop_gateway": "",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/vpnTunnels/jp-to-id-tunnel",
            "priority": 1000,
            "project": "mitsui-jp-network-defaroyan",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/routes/jp-to-id-route",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.id_vpn_static_ip",
            "google_compute_address.jp_vpn_static_ip",
            "google_compute_forwarding_rule.jp_esp_rule",
            "google_compute_forwarding_rule.jp_udp_4500_rule",
            "google_compute_forwarding_rule.jp_udp_500_rule",
            "google_compute_network.external_jp_vpc",
            "google_compute_vpn_gateway.jp_vpn_gateway",
            "google_compute_vpn_tunnel.jp_to_id_tunnel",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:20.407-07:00",
            "description": "Router for Cloud NAT service",
            "encrypted_interconnect_router": false,
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
            "project": "mitsui-id-network-defaroyan",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.internet_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "mitsui-id-network-defaroyan/asia-southeast2/nat-router/egress-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "egress-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mitsui-id-network-defaroyan",
            "region": "asia-southeast2",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.internet_id_vpc",
            "google_compute_router.nat_router",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_external_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:33.203-07:00",
            "gateway_address": "10.10.3.1",
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-external-id-vpc",
            "ip_cidr_range": "10.10.3.0/24",
            "name": "subnet-external-id-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/external-id-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-id-network-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-external-id-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7394690452705246010
          },
          "dependencies": [
            "google_compute_network.external_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_external_jp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-jp-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:09.495-07:00",
            "gateway_address": "10.10.21.1",
            "id": "projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/subnetworks/subnet-external-jp-vpc",
            "ip_cidr_range": "10.10.21.0/24",
            "name": "subnet-external-jp-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/global/networks/external-jp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-jp-network-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-jp-network-defaroyan/regions/asia-northeast2/subnetworks/subnet-external-jp-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4907516200587098962
          },
          "dependencies": [
            "google_compute_network.external_jp_vpc",
            "google_project_service.api_jp_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_internet_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:22.265-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-internet-id-vpc",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "subnet-internet-id-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/internet-id-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-id-network-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-internet-id-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3942494301089954597
          },
          "dependencies": [
            "google_compute_network.internet_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_prod_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:32.571-07:00",
            "gateway_address": "10.10.4.1",
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-prod-id-vpc",
            "ip_cidr_range": "10.10.4.0/24",
            "name": "subnet-prod-id-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/prod-id-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-id-network-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.10.5.0/24",
                "range_name": "pod-ranges"
              },
              {
                "ip_cidr_range": "10.10.6.0/24",
                "range_name": "services-ranges"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-prod-id-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8296086208463239995
          },
          "dependencies": [
            "google_compute_network.prod_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-core",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:07.087-07:00",
            "gateway_address": "10.10.11.1",
            "id": "projects/mitsui-id-core-defaroyan/regions/asia-southeast2/subnetworks/subnet-prod-vpc",
            "ip_cidr_range": "10.10.11.0/24",
            "name": "subnet-prod-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-core-defaroyan/global/networks/prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-id-core-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.220.0.0/14",
                "range_name": "gke-private-cluster-pods-ffe8395d",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/mitsui-id-core-defaroyan/locations/global/internalRanges/gke-private-cluster-pods-ffe8395d"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-core-defaroyan/regions/asia-southeast2/subnetworks/subnet-prod-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3103111233066761044
          },
          "dependencies": [
            "google_compute_network.prod_vpc",
            "google_project_service.api_id_core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_transit_id_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:19:16.817-07:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-transit-id-vpc",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "subnet-transit-id-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/networks/transit-id-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mitsui-id-network-defaroyan",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/regions/asia-southeast2/subnetworks/subnet-transit-id-vpc",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6221923227073510187
          },
          "dependencies": [
            "google_compute_network.transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "lb_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:21:43.499-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/mitsui-id-network-defaroyan/global/targetHttpProxies/lb-target-proxy",
            "name": "lb-target-proxy",
            "project": "mitsui-id-network-defaroyan",
            "proxy_bind": false,
            "proxy_id": 4396676496957634744,
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/targetHttpProxies/lb-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_health_check.ngfw_health_check",
            "google_compute_instance.ngfw_router",
            "google_compute_instance_group.ngfw_instance_group",
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_compute_url_map.lb_url_map",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].mitsui-id-net",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-18T21:21:31.558-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/backendServices/lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "iB6SfMsjSG4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/mitsui-id-network-defaroyan/global/urlMaps/lb-url-map",
            "map_id": 4881208675495573668,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "mitsui-id-network-defaroyan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mitsui-id-network-defaroyan/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_health_check.ngfw_health_check",
            "google_compute_instance.ngfw_router",
            "google_compute_instance_group.ngfw_instance_group",
            "google_compute_network.internet_id_vpc",
            "google_compute_network.transit_id_vpc",
            "google_compute_subnetwork.subnet_internet_id_vpc",
            "google_compute_subnetwork.subnet_transit_id_vpc",
            "google_project_service.api_id_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    }
  ]
}